# solace-ai-connector

./: .dockerignore  .env_template  .fossa.yml  .gitignore  .pr_agent.toml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASE_PROCESS.md  config.yaml  container-structure-test-file.yaml  docker-compose-local.yaml  fix_abs_paths.py  junit-3.11.xml  llms.txt  prompts.txt  prompts.yaml  pyproject.toml  requirements.txt  requirements.txt.old  simplified-app-plan.md  slack.yaml  test_nack.py  wss-unified-agent.config
.github/: pull_request_template.md  workflow-config.json
.github/workflows/: ci.yaml  ci.yml  cleanup_ws.yaml  fossa-scan.yaml  pr-size-validation.yaml  release.yaml  sync.yml
.github/workflows/workflows/: pr-agent.yaml
docs/: advanced_component_features.md  configuration.md  custom_components.md  getting_started.md  health_checks.md  index.md  instructions.md  logging.md  observability.md  overview.md  simplified-apps.md  ssl_proxy_configuration.md  tips_and_tricks.md  usage.md
docs/components/: aggregate.md  assembly.md  broker_input.md  broker_output.md  broker_request_response.md  delay.md  error_input.md  file_output.md  index.md  iterate.md  langchain_chat_model.md  langchain_chat_model_with_history.md  langchain_embeddings.md  langchain_split_text.md  langchain_vector_store_delete.md  langchain_vector_store_embedding_index.md  langchain_vector_store_embedding_search.md  litellm_chat_model.md  litellm_chat_model_with_history.md  litellm_embeddings.md  message_filter.md  mongo_base.md  mongo_insert.md  mongo_search.md  openai_chat_model.md  openai_chat_model_with_history.md  parser.md  pass_through.md  slack_input.md  slack_output.md  sql_base.md  sql_execute.md  sql_insert.md  stdin_input.md  stdout_output.md  timer_input.md  user_processor.md  web_scraper.md  websearch_bing.md  websearch_duckduckgo.md  (+3 more)
docs/guides/: RAG.md  broker_request_response.md  index.md
docs/images/: flows.vsdx  parts_of_a_component.vsdx
docs/implementation_plans/: app_config_validation.md
docs/plans/: 2025-12-11-kubernetes-health-checks-design.md  2025-12-11-kubernetes-health-checks.md
docs/transforms/: append.md  copy.md  copy_list_item.md  filter.md  index.md  map.md  reduce.md
examples/: ack_test.yaml  anthropic_bedrock.yaml  assembly_inputs.yaml  broker_input_output.yaml  chat_model_with_history.yaml  disable_components.yaml  error_handler.yaml  health_check_config.yaml  milvus_store.yaml  monitoring.yaml  parser.yaml  request_reply.yaml  simple_echo_app.py  vector_store_search.yaml
examples/custom_components/: web_search.py  web_search.yaml
examples/db/: mongodb_insert.yaml  sql_db.yaml
examples/llm/: anthropic_chat.yaml  bedrock_anthropic_chat.yaml  langchain_openai_with_history_chat.yaml  litellm_bedrock_chat.yaml  litellm_bedrock_embedding.yaml  litellm_chat.yaml  litellm_chat_with_history.yaml  litellm_embedding.yaml  mixture_of_agents.yaml  openai_chat.yaml  openai_chroma_rag.yaml  openai_chroma_rag_with_splitter.yaml  openai_component_request_response.yaml  openai_pgvector_ingestion.yaml  openai_qudrant_ingestion.yaml  vertexai_chat.yaml
examples/llm/custom_components/: llm_streaming_custom_component.py
examples/observability/: basic_observability.yaml  full_observability.yaml  observability.yaml
examples/websearch/: bing_web_search.yaml  duckduckgo_web_search.yaml  google_web_search.yaml  web_scraping.yaml  websearch_router.yaml
examples/websocket/: websocket.yaml  websocket_example_app.html
src/: main.py
src/solace_ai_connector/: __init__.py  logging.py  main.py  solace_ai_connector.py
src/solace_ai_connector/common/: __init__.py  config_validation.py  custom_formatters.py  event.py  exceptions.py  health_check.py  invoke_functions.py  log.py  logging_config.py  management_server.py  message.py  monitoring.py  session_config.py  utils.py
src/solace_ai_connector/components/: __init__.py  component_base.py
src/solace_ai_connector/flow/: app.py  flow.py  multi_session_request_response_manager.py  request_response_controller.py  request_response_flow_controller.py  request_response_session.py  session_registry.py  subscription_router.py  timer_manager.py
src/solace_ai_connector/flow_components/: component_base.py
src/solace_ai_connector/services/: __init__.py  cache_service.py
src/solace_ai_connector/storage/: storage.py  storage_file.py  storage_manager.py
src/solace_ai_connector/test_utils/: utils_for_test_files.py
src/solace_ai_connector/tools/: gen_component_docs.py
src/solace_ai_connector/transforms/: __init__.py  append.py  copy_list_item.py  filter.py  map.py  reduce.py  transform_base.py  transforms.py
src/solace_ai_event_connector/: solace_ai_event_connector.py
src/solace_ai_event_connector/common/: log.py  message.py  trace_message.py  utils.py
src/solace_ai_event_connector/flow/: flow.py
src/solace_ai_event_connector/flow_components/: component_base.py
src/solace_ai_event_connector/storage/: storage_file.py  storage_manager.py  storage_memory.py  storage_s3.py
src/tools/: gen_component_docs.py
tests/: conftest.py  test_acks.py  test_aggregate.py  test_app.py  test_app_lifecycle.py  test_broker_request_response_stop.py  test_component_validation.py  test_config_file.py  test_error_flows.py  test_filter.py  test_flows.py  test_invoke.py  test_iterate.py  test_message_get_set_data.py  test_multi_session_request_response.py  test_multiple_config_files.py  test_nacks.py  test_request_response_controller.py  test_solace_ai_connector_health.py  test_storage.py  test_timer_input.py  test_transforms.py  utils_for_test_files.py
tests/common/: __init__.py  test_health_check.py  test_observability.py  test_observability_monitors.py  test_observability_value_metrics.py  test_observability_without_initialization.py
tests/common/logging/: __init__.py  conftest.py  test_colored_formatter.py  test_logging_config.py  test_logging_ini_config.py  (+4 more)
tests/integration/: test_health_check_integration.py  test_observability_integration.py
tests/unit/: test_app_validation.py  test_simplified_app.py  test_timer_manager.py
(+191 files in other folders)
