[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "solace_ai_connector"
#version = "0.0.1" # Commented out for workaround
dynamic = ["version"] # Commented out for workaround
authors = [
  { name="Edward Funnekotter", email="edward.funnekotter@solace.com" },
]
description = "Solace AI Connector - make it easy to connect Solace PubSub+ Event Brokers to AI/ML frameworks"
readme = "README.md"
requires-python = ">=3.10.16"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML",
    "requests",
    "solace_pubsubplus",
    "SQLAlchemy",
    'pywin32>=311; sys_platform >= "win32"',
    "gevent",
    "gevent-websocket",
    "python-json-logger",
    "urllib3"
]

[project.optional-dependencies]
# Basic LLM functionality
llm = [
    "litellm",
]

# OpenAI specific dependencies
openai = [
    "openai",
    "langchain-openai",
]

# AWS integration (Bedrock, etc.)
aws = [
    "boto3",
    "langchain_aws",
    "requests_aws4auth",
]

# Vector stores
chromadb-vector-store = [
    "chromadb",
    "langchain-chroma",
]

qdrant-vector-store = [
    "langchain-qdrant",
]

milvus-vector-store = [
    "langchain_milvus",
    "pymilvus",
]

# PostgreSQL vector database
pgvector-vector-store = [
    "pgvector",
    "langchain-postgres",
    "psycopg-binary",
]

# LangChain core and utilities
langchain = [
    "langchain",
]

# Web search capabilities
webscraping = [
    "playwright",
    "beautifulsoup4",
    "Brotli",
]

# RAG (Retrieval Augmented Generation)
splitter = [
    "langchain-text-splitters",
]

# Mongo database
mongodb = [
    "pymongo",
]

# SQL database
sql = [
    "mysql_connector_python",
    "psycopg2-binary",
]

# Web Socket
websocket = [
    "Flask",
    "Flask-SocketIO",
    "Flask-WTF",
]

llm_ext_release = [
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "annotated-types",
    "anyio",
    "attrs",
    "certifi",
    "charset-normalizer",
    "click",
    "distro",
    "filelock",
    "frozenlist",
    "fsspec",
    "h11",
    "httpcore",
    "httpx",
    "huggingface-hub",
    "idna",
    "importlib_metadata",
    "Jinja2",
    "jiter",
    "jsonschema",
    "jsonschema-specifications",
    "litellm",
    "MarkupSafe",
    "multidict",
    "openai",
    "packaging",
    "propcache",
    "pydantic",
    "pydantic_core",
    "python-dotenv",
    "dotenv",
    "PyYAML",
    "referencing",
    "regex",
    "rpds-py",
    "sniffio",
    "tiktoken",
    "tokenizers",
    "tqdm",
    "typing_extensions",
    "typing-inspection",
    "yarl",
    "zipp",
]

openai_ext_release = [
    "annotated-types",
    "anyio",
    "certifi",
    "charset-normalizer",
    "distro",
    "h11",
    "httpcore",
    "httpx",
    "idna",
    "jiter",
    "jsonpatch",
    "jsonpointer",
    "langchain-core",
    "langchain-openai",
    "langsmith",
    "openai",
    "orjson",
    "packaging",
    "pydantic",
    "pydantic_core",
    "PyYAML",
    "regex",
    "requests-toolbelt",
    "sniffio",
    "tenacity",
    "tiktoken",
    "tqdm",
    "typing_extensions",
    "typing-inspection",
    "zstandard",
]

qdrant_ext_release = [
    "annotated-types",
    "anyio",
    "certifi",
    "charset-normalizer",
    "grpcio",
    "grpcio-tools",
    "h11",
    "h2",
    "hpack",
    "httpcore",
    "httpx",
    "hyperframe",
    "idna",
    "jsonpatch",
    "jsonpointer",
    "langchain-core",
    "langchain-qdrant",
    "langsmith",
    "orjson",
    "packaging",
    "portalocker",
    "protobuf",
    "pydantic",
    "pydantic_core",
    "PyYAML",
    "qdrant-client",
    "requests",
    "requests-toolbelt",
    "setuptools",
    "sniffio",
    "tenacity",
    "typing_extensions",
    "typing-inspection",
    "zstandard",
]

splitter_ext_release = [
    "annotated-types",
    "anyio",
    "certifi",
    "charset-normalizer",
    "h11",
    "httpcore",
    "httpx",
    "idna",
    "jsonpatch",
    "jsonpointer",
    "langchain-core",
    "langchain-text-splitters",
    "langsmith",
    "orjson",
    "packaging",
    "pydantic",
    "pydantic_core",
    "PyYAML",
    "requests-toolbelt",
    "sniffio",
    "tenacity",
    "typing_extensions",
    "typing-inspection",
    "zstandard",
]

# Test specific dependencies
test = [
    "pytest", # Example version, adjust as needed
    "pytest-mock", # Example version
    "pytest-cov", # If you use coverage
    "pytest-asyncio",
    # Add other test-specific dependencies here
]

# Integration test dependencies
integration-test = [
    "trustme",  # For generating test certificates
    "aiohttp",  # For creating mock servers
    "bcrypt",
    "passlib",    
    "requests-mock",
    "mitmproxy",  # For SSL proxy testing
    "pytest-mock",
    "pytest-asyncio",  # For async testing support
 #  "proxy-py @ git+https://github.com/abhinavsingh/proxy.py.git@master" - temporary, to allow release
]


# All dependencies
all = [
    "numpy",
    "python-dotenv",
    "dotenv",

    # From langchain
    "langchain",

    # From llm
    "litellm",
    
    # From openai
    "openai",
    "langchain-openai",
    
    # From aws
    "boto3",
    "langchain_aws",
    "requests_aws4auth",
    
    # From chromadb-vector-store
    "chromadb",
    "langchain-chroma",
    
    # From qdrant-vector-store
    "langchain-qdrant",
    "qdrant-client",
    
    # From milvus-vector-store
    "langchain_milvus",
    "pymilvus",
    
    # From pgvector-vector-store
    "pgvector",
    "langchain-postgres",
    "psycopg-binary",
    
    # From webscraping
    "playwright",
    "beautifulsoup4",
    "Brotli",
    "python-dotenv",
    
    # From splitter
    "langchain-text-splitters",
    
    # From mongodb
    "pymongo",

    # From sql
    "mysql_connector_python",
    "psycopg2-binary",
    
    # From websocket
    "Flask",
    "Flask-SocketIO",
    "Flask-WTF",
]


[project.urls]
homepage = "https://github.com/SolaceLabs/solace-ai-connector"
repository = "https://github.com/SolaceLabs/solace-ai-connector"
documentation = "https://github.com/SolaceLabs/solace-ai-connector/blob/main/docs/index.md"


[project.scripts]
solace-ai-connector = "solace_ai_connector.main:main"
solace-ai-connector-gen-docs = "solace_ai_connector.tools.gen_component_docs:main"

[tool.hatch.envs.hatch-test]
installer = "pip"
dependencies = [
  "pytest",
  "pytest-mock",
  "pytest-cov",
  "pytest-xdist",
  "pytest-asyncio"
]
features = ["all"]

# Specify minimum and maximum Python versions to test
[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.13"]

[tool.hatch.build.targets.wheel]
packages = ["src/solace_ai_connector"]

[tool.hatch.version] # Commented out for workaround
path = "src/solace_ai_connector/__init__.py" # Commented out for workaround

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
lint.select = ["E4", "E7", "E9", "F"]
lint.ignore = ["F401", "E731"]

[tool.pytest.ini_options]
# Register pytest-mock plugin explicitly
addopts = "-p pytest_mock --ignore=tests/integration/"
testpaths = ["tests"]

log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s | %(levelname)-6s | %(name)s | %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

log_file = "tests.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s | %(levelname)-6s | %(name)s | %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file_mode = "a"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.xml]
output = "coverage.xml"
